# tengingarstjori

./: .flake8  .gitignore  .gitleaks.toml  .impeccable.md  .mise.toml  .pre-commit-config.yaml  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  FINAL_SUMMARY.md  FLAKE8_FIXES.md  MANIFEST.in  PUBLISHING_GUIDE.md  QUALITY_FIXES.md  README.md  SECURITY_AUDIT.md  UBUNTU_INSTALL.md  VERSIONING_STRATEGY.md  great-docs.yml  index.html  install.sh  main.py  pre_commit_tests.sh  pyproject.toml  pytest.ini  requirements.txt  reset_tg.sh  security_best_practices_report.md
.github/workflows/: publish.yml  test.yml
.maki/: permissions.toml
.prompt-extraction/: COMPLETION-SUMMARY.md  update-command-implementation.md
docs/: 2025-07-4-CHANGES.md  COMPLETION-SUMMARY.md  DEVELOPMENT.md  FINAL-PYTEST-FIXES.md  INTEGRATION-TEST-ANALYSIS.md  PACKAGE_READY.md  PHASE1_SUMMARY.md  PHASES.md  PROJECT-CLEANUP-ANALYSIS.md  PYPI_PUBLISHING_GUIDE.md  QUICK_REFERENCE.md  USAGE.md  demo.md  publishing-setup.md
docs/plans/: grest-docs.md
notes/: demo.md
scripts/: auto-fix.sh  build.py  bump_version.py  debug_pytest.py  format-code.sh  test-and-capture.sh  test-before-commit.sh  test-coverage.sh  test_features.sh  test_flake8_fixes.py  test_pypi_installation.sh  validate_package.py
src/: __init__.py  cli.py  cli.py.backup  config_manager.py  exceptions.py  models.py  setup.py
src/tengingarstjori/: __init__.py  __main__.py  cli.py  config_manager.py  exceptions.py  models.py  setup.py
tests/: __init__.py  test_cli.py  test_cli_coverage.py  test_config_manager.py  test_config_manager_advanced.py  test_exceptions.py  test_models.py  test_models_advanced.py  test_new_commands.py  test_package_integration.py  test_phase1_fixes.py  test_setup.py
